--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,38 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "2\n",
-      "6\n",
-      "24\n",
-      "120\n",
-      "720\n",
-      "5040\n",
-      "40320\n",
-      "362880\n"
-     ]
-    }
-   ],
-   "source": [
-    "from hello.main import factorial\n",
-    "\n",
-    "for i in range(10):\n",
-    "    print(factorial(i))\n",
-    "\n",
-    "x: str = '10'\n",
-    "y: int = 20\n"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "interpreter": {
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
